﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [00 Minor]
 - Change Tweet URL to point to the release page at #whatsnew instead of
   the full changelog

2.013001 2014-04-12T10:22:38Z
 [00 Minor]
 - Minor doc fixes.
 - Dep bumps

 [Dependencies::Stats]
 - Dependencies changed since 2.013000, see Changes.deps{,.all,.dev} for
   details
 - configure: (recommends: ↑1)
 - runtime: ↑5
 - test: (recommends: ↑1)

2.013000 2014-04-11T03:02:57Z
 [00 Major - Dist Minting Changes]
 - Now default to EUMM
 - Now default to soft tooling
 - Now come with my PerlCritic compiler thing
 - Now come with a different perlcritic.rc

 [Dependencies::Stats]
 - Dependencies changed since 2.012002, see Changes.deps{,.all,.dev} for
   details
 - develop: ↑1
 - runtime: ↑3

2.012002 2014-03-31T04:16:46Z
 [00 Minor]
 - Update utils.
 - dep_changes now qualifies numbers better
 - strip_eol gives a little match context
 - Dep bump

 [Dependencies::Stats]
 - Dependencies changed since 2.012001, see Changes.deps{,.all,.dev} for
   details
 - configure: (recommends: ↑1)
 - develop: ↑3
 - runtime: ↑25
 - test: ↑2 (recommends: ↑2)

2.012001 2014-03-17T18:59:57Z
 [00 Minor]
 - default to jobs = 10

 [Dependencies::Aggregate]
 - 5.010 : 294 → 293
 - 5.012 : 284 → 286
 - 5.019 : 277 → 275

 [Dependencies::Stats]
 - Dependencies changed since 2.012000, see Changes.deps{,.all,.dev} for
   details
 - configure: (recommends: ↑1)
 - develop: ↑3
 - runtime: ↑35
 - test: ↑4 (recommends: ↑2)

2.012000 2014-01-30T08:12:10Z
 [00 Possible Downstream Toolbugs]
 - This distribution switching to EUMM.
 - Future release may default to EUMM

 [Dependencies::Stats]
 - Dependencies changed since 2.011001, see Changes.deps{,.all,.dev} for
   details
 - build: -1 (recommends: -1)
 - configure: +2 -1 (recommends: +1 -1)
 - runtime: +1 -1
 - test: +1 ↓1 (recommends: +1)

2.011001 2014-01-30T05:38:14Z
 [00 Bugfix]
 - Fix regression where hardness value regulated develop time dependencies.