@@ -4,7 +4,7 @@ Dist::Zilla::PluginBundle::Author::KENTNL - BeLike::KENTNL when you build your d
 
 # VERSION
 
-version 2.013001
+version 2.013002
 
 # SYNOPSIS
 
@@ -13,10 +13,10 @@ version 2.013001
                           ; otherwise use an older bundle version.
 
     normal_form  = numify ; Mandatory for this bundle indicating normal form.
-                          ; see DZP::Git::NextVersion
+                          ; see DZP::Git::NextVersion::Sanitized
 
     mantissa     = 6      ; Mandatory for this bundle if normal_form is numify.
-                          ; see DZP::Git::NextVersion
+                          ; see DZP::Git::NextVersion::Sanitized
 
     authority    = cpan:KENTNL ; Optional, defaults to cpan:KENTNL
 
@@ -98,6 +98,98 @@ See [the `PluginBundle` role](https://metacpan.org/pod/Dist::Zilla::Role::Plugin
 ## `configure`
 
 Called by in `bundle_config` after `new`
+
+# ATTRIBUTES
+
+## `plugins`
+
+__INTERNAL__.
+
+    ArrayRef, ro, default = [], no init arg.
+
+Populated during `$self➛configure` and returned from `➛bundle_config`
+
+## `normal_form`
+
+    Str, ro, required
+
+A `normal_form` to pass to [`[Git::NextVersion::Sanitized]`](https://metacpan.org/pod/Dist::Zilla::Plugin::Git::NextVersion::Sanitized).
+
+See [`[::Role::Version::Sanitize]`](https://metacpan.org/pod/Dist::Zilla::Role::Version::Sanitize)
+
+## `mantissa`
+
+    Int, ro, required if normal_form eq 'numify'
+
+Defines the length of the mantissa when normal form is `numify`.
+
+See [`[Git::NextVersion::Sanitized]`](https://metacpan.org/pod/Dist::Zilla::Plugin::Git::NextVersion::Sanitized) and [`[::Role::Version::Sanitize]`](https://metacpan.org/pod/Dist::Zilla::Role::Version::Sanitize)
+
+## `git_versions`
+
+    enum([1]), ro, required
+
+- __MUST BE SPECIFIED__
+- __MUST BE `1`__
+
+Setting as such indicates that the distribution in question is safe to use with `Git::NextVersion`.
+
+As no logic exists any more to support using anything other than `Git::NextVersion` with this bundle,
+this parameter must be turned on and you must use Git::NextVersion.
+
+## `authority`
+
+    Str, ro, default = cpan:KENTNL
+
+An authority string to use for `[Authority]`.
+
+## `auto_prereqs_skip`
+
+    ArrayRef, ro, multivalue, default = []
+
+A list of prerequisites to pass to `[AutoPrereqs].skips`
+
+## `twitter_extra_hash_tags`
+
+    Str, ro, default = ""
+
+Additional hash tags to append to twitter
+
+## `twitter_hash_tags`
+
+    Str, ro, default = '#perl #cpan' . extras()
+
+Populates `extras` from `twitter_extra_hash_tags`
+
+## `tweet_url`
+
+    Str, ro, default =  q[https://metacpan.org/release/{{$AUTHOR_UC}}/{{$DIST}}-{{$VERSION}}{{$TRIAL}}#whatsnew]
+
+The `URI` to tweet to `@kentnlrelease`
+
+## `toolkit_hardness`
+
+    enum( hard, soft ), ro, default = hard
+
+- `hard`
+
+    Copy the versions of important toolkit components the author was using as `required` dependencies,
+    forcing consumers to update aggressively on those parts.
+
+- `soft`
+
+    Copy the versions of important toolkit components the author was using as `recommended` dependencies,
+    so that only consumers who are installing with `--with-recommended` get given the forced upgrade path.
+
+## `toolkit`
+
+    enum( mb, mbtiny, eumm ), ro, default = mb
+
+Determines which tooling to generate the distribution with
+
+- `mb` : [`Module::Build`](https://metacpan.org/pod/Module::Build)
+- `mbtiny` : [`Module::Build::Tiny`](https://metacpan.org/pod/Module::Build::Tiny)
+- `eumm` : [`ExtUtils::MakeMaker`](https://metacpan.org/pod/ExtUtils::MakeMaker)
 
 # AUTHOR
 
