@@ -4,6 +4,7 @@
  [00 Minor]
  - Change Tweet URL to point to the release page at #whatsnew instead of
    the full changelog
+ - Fully document attributes and fix a few mistakes.
 
 2.013001 2014-04-12T10:22:38Z
  [00 Minor]
